deployment/backend/K8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: scmy-studyconnect-production
  labels:
    app: backend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/studyconnect-zhaw/backend/production:0.2.26
          ports:
            - containerPort: 8080
