deployment/backend/K8s/production/mssql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-server
  namespace: scmy-studyconnect-production
  labels:
    app: mssql-server
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  serviceName: "mssql-service"
  replicas: 1
  selector:
    matchLabels:
      app: mssql-server
  template:
    metadata:
      labels:
        app: mssql-server
    spec:
      containers:
      - name: mssql-server
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-data
          mountPath: /var/opt/mssql/data
  volumeClaimTemplates:
  - metadata:
      name: mssql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
      storageClassName: cinder-csi
