deployment/backend/K8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: api-scmy-studyconnect-production.pm4.init-lab.ch
      http:
        paths:
          - backend:
              service:
                name: backend-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
